feat(ui): Remove highlighting for CLDR vs Legacy diffs

--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,9 @@
     
     <div id="color-key">
         <span>Key:</span>
+        <span class="key-item"><span class="color-box mismatch-dark-red"></span>Browser vs Puppeteer</span>
         <span class="key-item"><span class="color-box mismatch-red"></span>Node vs Browser</span>
         <span class="key-item"><span class="color-box mismatch-orange"></span>Java CLDR vs Browser</span>
-        <span class="key-item"><span class="color-box mismatch-yellow"></span>Java CLDR vs Java Legacy</span>
     </div>
 
     <table id="comparison-table">
