docs: update UI key to include all symbols

--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,11 @@
     
     <div id="color-key">
         <span>Key:</span>
-        <span class="key-item"><span class="color-box mismatch-dark-red"></span>Browser vs Puppeteer</span>
+        <span class="key-item"><span class="color-box mismatch-dark-red"></span>Sparticuz vs Browser</span>
         <span class="key-item"><span class="color-box mismatch-red"></span>Node vs Browser</span>
         <span class="key-item"><span class="color-box mismatch-orange"></span>Java CLDR vs Browser</span>
+        <span class="key-item">⌴: Differs by a single space</span>
+        <span class="key-item">≈: Differs by other whitespace</span>
     </div>
 
     <table id="comparison-table">
